discord embeds + link upload

--- a/Pages/upload.cshtml
+++ b/Pages/upload.cshtml
@@ -21,13 +21,18 @@
 		</div>
 
 		<div class="input-container">
-			<label for="file">File</label>
-			<input type="file" id="file" name="File" required />
+			<label for="file">Select file</label>
+			<input type="file" id="file" name="File" />
+		</div>
+
+		<div class="input-container">
+			<label for="file">Or link file</label>
+			<input type="text" id="link" name="Link" />
 		</div>
 
 		<div class="input-container" >
 			<label for="name">Name</label>
-			<input type="text" id="name" name="Name" placeholder="ruby.png" maxlength="128" required />
+			<input type="text" id="name" name="Name" placeholder="ruby.png" maxlength="128" />
 		</div>
 
 		<div class="input-container" >
