--- a/wwwroot/css/item.css
+++ b/wwwroot/css/item.css
@@ -45,14 +45,16 @@ main {
 }
 
 .content-container {
-	height: 0;
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
+
+	position: relative;
 }
 
 .content-container img {
 	object-fit: contain;
-	max-width: 100%;
-	max-height: 100%;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
