add logging & modelstate response, fix filename

--- a/Pages/upload.cshtml
+++ b/Pages/upload.cshtml
@@ -5,13 +5,13 @@
 }
 
 <link rel="stylesheet" href="~/css/upload.css" />
-<form enctype="multipart/form-data" >
+<form enctype="multipart/form-data">
 
 	<div class="wrapper">
 
 		@if (!isAuthenticated)
 		{
-				<h2>Log in to upload</h2>
+			<h2>Log in to upload</h2>
 		}
 
 		<div class="spinner">
@@ -30,31 +30,32 @@
 			<input type="text" id="link" name="Link" />
 		</div>
 
-		<div class="input-container" >
+		<div class="input-container">
 			<label for="name">Name</label>
 			<input type="text" id="name" name="Name" placeholder="ruby.png" maxlength="128" />
 		</div>
 
-		<div class="input-container" >
+		<div class="input-container">
 			<label for="filename">Filename</label>
 			<input type="text" id="filename" name="Filename" maxlength="128" />
 		</div>
 
 		<div class="input-container">
 			<label for="description">Description</label>
-			<textarea id="description" name="description" maxlength="512" ></textarea>
+			<textarea id="description" name="description" maxlength="512"></textarea>
 		</div>
 
-		<div style="display: flex; gap: 0.25em; align-items: center;" >
+		<div style="display: flex; gap: 0.25em; align-items: center;">
 			<label for="unlisted">Unlisted</label>
 			<input style="aspect-ratio: 1/1; height: 1em;" type="checkbox" id="unlisted" name="Unlisted" value="true" />
 		</div>
 
 		<div class="input-container">
 			<label for="type">Type</label>
-			<select id="type" name="Type" >
+			<select id="type" name="Type">
 				<option value="-1">Auto</option>
-				@foreach (e_b.Domain.Models.Database.Content.ContentType type in Enum.GetValues(typeof(e_b.Domain.Models.Database.Content.ContentType)))
+				@foreach (e_b.Domain.Models.Database.Content.ContentType type in
+						Enum.GetValues(typeof(e_b.Domain.Models.Database.Content.ContentType)))
 				{
 					<option value="@((int)type)">@type.ToString()</option>
 				}
@@ -69,7 +70,7 @@
 		@if (!isAuthenticated)
 		{
 			<script>
-				document.querySelectorAll("form *:is(input, select, textarea, button)").forEach((e) => e.disabled = true);
+				document.querySelectorAll("form :is(input, select, textarea, button)").forEach((e) => e.disabled = true);
 			</script>
 		}
 
